[project]
name = "policy-inference-spec"
version = "0.1.0"
description = "Specification for client and server for policy inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.18.3",
    "numpy>=2.0,<2.2",
    "msgspec>=0.19.0",
    "simplejpeg>=1.8.2",
    "torch>=2.0",
    "websockets>=15.0.1",
    "opencv-contrib-python-headless==4.10.*",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["policy_inference_spec", "server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
